After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 631562 - gphoto backend does not work with libgphoto2 >= 2.4.10
gphoto backend does not work with libgphoto2 >= 2.4.10
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: gphoto backend
1.6.x
Other Linux
: Normal major
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2010-10-06 21:35 UTC by Fryderyk Dziarmagowski
Modified: 2010-10-29 02:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
workaround suggested by Krzysztof Kotlenga on gphoto-devel (568 bytes, patch)
2010-10-06 21:35 UTC, Fryderyk Dziarmagowski
none Details | Review
Use correct "usb:" address for GPhoto mounts with gudev (4.76 KB, patch)
2010-10-28 16:27 UTC, Bastien Nocera
none Details | Review

Description Fryderyk Dziarmagowski 2010-10-06 21:35:12 UTC
Created attachment 171853 [details] [review]
workaround suggested by Krzysztof Kotlenga on gphoto-devel

$Summary says all. The problem was described here:
http://sourceforge.net/mailarchive/message.php?msg_name=20100901193427.GB24225%40foo

steps to reproduce:
get usb port of the camera
try gvfs-mount "gphoto2://[usb:012345]/"
gvfs-mount will fail to mount

The workaround suggested in above post solves the problem.
Comment 1 Bastien Nocera 2010-10-14 00:47:46 UTC
Comment on attachment 171853 [details] [review]
workaround suggested by Krzysztof Kotlenga on gphoto-devel

Please mark patches as such when uploading them
Comment 2 Bastien Nocera 2010-10-28 16:27:02 UTC
Created attachment 173411 [details] [review]
Use correct "usb:" address for GPhoto mounts with gudev

gphoto2 expects the usb:X,X addresses to use the dirname and device
names from libusb, which are zero-padded. Given that it's what udev
gives us, just don't transform it to an int before printing.
Comment 3 Bastien Nocera 2010-10-28 16:28:17 UTC
Please test with this patch, it should fix it properly, and not break other versions (that use HAL).
Comment 4 Bastien Nocera 2010-10-28 16:28:48 UTC
Note for self, also at:
https://bugzilla.redhat.com/show_bug.cgi?id=642836
Comment 5 Christian Krause 2010-10-28 19:56:20 UTC
(In reply to comment #3)
> Please test with this patch, it should fix it properly, and not break other
> versions (that use HAL).

I have tested this patch in Fedora 14 (udev) and I can confirm that it solves the problem.
Comment 6 Bastien Nocera 2010-10-29 02:24:49 UTC
commit 089ba0b1af08f8b7506bd867a415e197f4017ec0
Author: Bastien Nocera <hadess@hadess.net>
Date:   Thu Oct 28 17:25:12 2010 +0100

    Use correct "usb:" address for GPhoto mounts with gudev
    
    gphoto2 expects the usb:X,X addresses to use the dirname and device
    names from libusb, which are zero-padded. Given that it's what udev
    gives us, just don't transform it to an int before printing.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=631562