Use correct "usb:" address for GPhoto mounts with gudev

gphoto2 expects the usb:X,X addresses to use the dirname and device
names from libusb, which are zero-padded. Given that it's what udev
gives us, just don't transform it to an int before printing.

https://bugzilla.gnome.org/show_bug.cgi?id=631562